--- a/scripts/airline_dashboard/airline_dashboard.ipynb
+++ b/scripts/airline_dashboard/airline_dashboard.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4ea95863-93a4-40f8-881b-1540470700f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing Required Libraries\n",
-    "\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import dash\n",
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "0ba5cab8-8d81-4705-b51e-4e364054fe83",
    "metadata": {},
    "outputs": [],
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1ea43f2a-be5c-460a-82b4-db593761d21c",
    "metadata": {},
    "outputs": [
@@ -68,7 +67,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x128cd7d90>"
+       "<IPython.lib.display.IFrame at 0x16444bf10>"
       ]
      },
      "metadata": {},
@@ -94,31 +93,13 @@
     "])\n",
     "# Run the application                   \n",
     "if __name__ == '__main__':\n",
-    "    app.run_server()"
+    "    app.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ff75cd3e-db62-42d3-8c99-bace7fed34c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TASK 3 - Add the application title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dc2ec75-02ef-4249-b183-9db97bb026b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datavisualisation",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
