--- a/scripts/australia_wildfire/dash_wildfire.ipynb
+++ b/scripts/australia_wildfire/dash_wildfire.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "b383f6d3-1338-4731-8f0b-5651d4635429",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11a987e10>"
+       "<IPython.lib.display.IFrame at 0x12cd61fd0>"
       ]
      },
      "metadata": {},
@@ -139,7 +139,7 @@
     "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True)\n"
+    "    app.run(debug=True)\n"
    ]
   },
   {
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datavisualisation",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
